// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPinnableListGroup can have custom pin icon titles 1`] = `
<ul
  aria-label="aria-label"
  class="euiListGroup euiPinnableListGroup testClass1 testClass2 emotion-euiListGroup-maxWidthDefault-euiTestCss"
  data-test-subj="test subject string"
>
  <li
    class="euiListItemLayout euiListGroupItem euiPinnableListGroup__item euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text"
    data-test-subj="euiListItemLayout"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__prepend emotion-euiListItemLayout__prepend"
      >
        <span
          class="euiListGroupItem__icon css-0"
          color="inherit"
          data-euiicon-type="stop"
        />
      </span>
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
        title="Label with iconType"
      >
        Label with iconType
      </span>
      <button
        aria-label="Pin Label with iconType to the top"
        class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-text-euiListGroupItemExtraAction-hoverStyles-euiPinnableListGroup__itemExtraAction"
        title="Pin Label with iconType to the top"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="pinFill"
        />
      </button>
    </span>
  </li>
  <li
    class="euiListItemLayout euiListGroupItem euiPinnableListGroup__item euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text"
    data-test-subj="euiListItemLayout"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
        title="Custom extra action"
      >
        Custom extra action
      </span>
      <button
        aria-label="bell"
        class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-text-euiListGroupItemExtraAction-alwaysShow"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="bell"
        />
      </button>
    </span>
  </li>
  <li
    class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-hasExtraAction-isInteractive-isSelected"
    data-test-subj="euiListItemLayout-wrapper"
  >
    <a
      aria-current="true"
      class="euiListItemLayout euiListGroupItem euiPinnableListGroup__item euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner"
      data-test-subj="euiListItemLayout"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListItemLayout__content emotion-euiListItemLayout__content"
      >
        <span
          class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
          title="Active link"
        >
          Active link
        </span>
      </span>
    </a>
    <button
      aria-label="Pin Active link to the top"
      class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-text-euiListGroupItemExtraAction-hoverStyles-euiPinnableListGroup__itemExtraAction"
      title="Pin Active link to the top"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="pinFill"
      />
    </button>
  </li>
  <li
    class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-hasExtraAction-isInteractive"
    data-test-subj="euiListItemLayout-wrapper"
  >
    <button
      class="euiListItemLayout euiListGroupItem euiPinnableListGroup__item euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
      data-test-subj="euiListItemLayout"
      type="button"
    >
      <span
        class="euiListItemLayout__content emotion-euiListItemLayout__content"
      >
        <span
          class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
          title="Button with onClick"
        >
          Button with onClick
        </span>
      </span>
    </button>
    <button
      aria-label="Unpin Button with onClick to the top"
      class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-text-euiListGroupItemExtraAction-alwaysShow-euiPinnableListGroup__itemExtraAction-pinned"
      title="Unpin Button with onClick to the top"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="pinFill"
      />
    </button>
  </li>
  <li
    class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-hasExtraAction-isInteractive"
    data-test-subj="euiListItemLayout-wrapper"
  >
    <a
      class="euiListItemLayout euiListGroupItem euiPinnableListGroup__item euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
      data-test-subj="euiListItemLayout"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListItemLayout__content emotion-euiListItemLayout__content"
      >
        <span
          class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
          title="Link with href"
        >
          Link with href
        </span>
      </span>
    </a>
    <button
      aria-label="Pin Link with href to the top"
      class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-text-euiListGroupItemExtraAction-hoverStyles-euiPinnableListGroup__itemExtraAction"
      title="Pin Link with href to the top"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="pinFill"
      />
    </button>
  </li>
  <li
    class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
    data-test-subj="euiListItemLayout-wrapper"
  >
    <a
      class="euiListItemLayout euiListGroupItem euiPinnableListGroup__item euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
      data-test-subj="euiListItemLayout"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListItemLayout__content emotion-euiListItemLayout__content"
      >
        <span
          class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
          title="Not pinnable"
        >
          Not pinnable
        </span>
      </span>
    </a>
  </li>
</ul>
`;

exports[`EuiPinnableListGroup is rendered 1`] = `
<ul
  aria-label="aria-label"
  class="euiListGroup euiPinnableListGroup testClass1 testClass2 emotion-euiListGroup-maxWidthDefault-euiTestCss"
  data-test-subj="test subject string"
>
  <li
    class="euiListItemLayout euiListGroupItem euiPinnableListGroup__item euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text"
    data-test-subj="euiListItemLayout"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__prepend emotion-euiListItemLayout__prepend"
      >
        <span
          class="euiListGroupItem__icon css-0"
          color="inherit"
          data-euiicon-type="stop"
        />
      </span>
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
        title="Label with iconType"
      >
        Label with iconType
      </span>
      <button
        aria-label="Pin item"
        class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-text-euiListGroupItemExtraAction-hoverStyles-euiPinnableListGroup__itemExtraAction"
        title="Pin item"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="pinFill"
        />
      </button>
    </span>
  </li>
  <li
    class="euiListItemLayout euiListGroupItem euiPinnableListGroup__item euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text"
    data-test-subj="euiListItemLayout"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
        title="Custom extra action"
      >
        Custom extra action
      </span>
      <button
        aria-label="bell"
        class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-text-euiListGroupItemExtraAction-alwaysShow"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="bell"
        />
      </button>
    </span>
  </li>
  <li
    class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-hasExtraAction-isInteractive-isSelected"
    data-test-subj="euiListItemLayout-wrapper"
  >
    <a
      aria-current="true"
      class="euiListItemLayout euiListGroupItem euiPinnableListGroup__item euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner"
      data-test-subj="euiListItemLayout"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListItemLayout__content emotion-euiListItemLayout__content"
      >
        <span
          class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
          title="Active link"
        >
          Active link
        </span>
      </span>
    </a>
    <button
      aria-label="Pin item"
      class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-text-euiListGroupItemExtraAction-hoverStyles-euiPinnableListGroup__itemExtraAction"
      title="Pin item"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="pinFill"
      />
    </button>
  </li>
  <li
    class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-hasExtraAction-isInteractive"
    data-test-subj="euiListItemLayout-wrapper"
  >
    <button
      class="euiListItemLayout euiListGroupItem euiPinnableListGroup__item euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
      data-test-subj="euiListItemLayout"
      type="button"
    >
      <span
        class="euiListItemLayout__content emotion-euiListItemLayout__content"
      >
        <span
          class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
          title="Button with onClick"
        >
          Button with onClick
        </span>
      </span>
    </button>
    <button
      aria-label="Unpin item"
      class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-text-euiListGroupItemExtraAction-alwaysShow-euiPinnableListGroup__itemExtraAction-pinned"
      title="Unpin item"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="pinFill"
      />
    </button>
  </li>
  <li
    class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-hasExtraAction-isInteractive"
    data-test-subj="euiListItemLayout-wrapper"
  >
    <a
      class="euiListItemLayout euiListGroupItem euiPinnableListGroup__item euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
      data-test-subj="euiListItemLayout"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListItemLayout__content emotion-euiListItemLayout__content"
      >
        <span
          class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
          title="Link with href"
        >
          Link with href
        </span>
      </span>
    </a>
    <button
      aria-label="Pin item"
      class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-text-euiListGroupItemExtraAction-hoverStyles-euiPinnableListGroup__itemExtraAction"
      title="Pin item"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="pinFill"
      />
    </button>
  </li>
  <li
    class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
    data-test-subj="euiListItemLayout-wrapper"
  >
    <a
      class="euiListItemLayout euiListGroupItem euiPinnableListGroup__item euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
      data-test-subj="euiListItemLayout"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListItemLayout__content emotion-euiListItemLayout__content"
      >
        <span
          class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
          title="Not pinnable"
        >
          Not pinnable
        </span>
      </span>
    </a>
  </li>
</ul>
`;
